offer alternate playback behavior
